--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -104,13 +104,14 @@ input, textarea {outline: none;}
 #pro > section > .myList {margin-top: 50px;}
 #pro > section > .myList > .pic {
     float:left;
+    margin: 5px;
+}
+#pro > section > .myList > .pic > a {
+    display: block;
     width: 300px;
-    min-height: 300px;
-    overflow: hidden;
-    margin: 5px; 
+    height: 300px;
     overflow: hidden;
 }
-#pro > section > .myList > .pic > a {display: block;} 
 #pro > section > .myList > .pic > a > img {width: 100%; height: 100%; object-fit:cover;}
 
   .fModal {
@@ -162,3 +163,56 @@ input, textarea {outline: none;}
   .addProf:focus {
     cursor: pointer;
   }
+
+  .peopleFollow {
+    background-color: #fefefe;
+    margin: 15% auto;
+    border: 1px solid #888;
+    width: 400px;
+    border-radius: 10px;
+  }
+
+  .closeFollow {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    margin-right: 5px;
+  }
+
+  .closeFollow:hover,
+  .closeFollow:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .closeFollowing {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    margin-right: 5px;
+  }
+
+  .closeFollowing:hover,
+  .closeFollowing:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  .fList {width: 100%; height:374px; padding: 10px; overflow-y: scroll;}
+
+  .peopleFollow > div {
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    line-height: 40px;
+    border-bottom: 1px solid #e9e9e9;
+    font-weight: bold;
+  }
+  .fList > li {width: 350px; height: 45px; display: inline-block; padding: 5px;}
+  .fList > li > a {display: block; width: 350px; height: 45px; line-height: 45px;}
+  .fList > li > a > h1 {height: 45px; float: left; font-size: 14px; margin-left: 10px; vertical-align: middle; line-height: 45px;}
+  .fList > li > a > img {line-height: 55px; float: left; width: 45px; vertical-align: middle;}
+
+
