--- a/HTML/css/chat.css
+++ b/HTML/css/chat.css
@@ -51,6 +51,7 @@
     position: absolute;
     top: 15%;
     left: 14%;
+    cursor: pointer;
 }
 
 .dir2{
@@ -183,6 +184,7 @@ li > img{
 .new-head-close{
     flex: 1;
     padding: 13px;
+    cursor: pointer;
 }
 
 .new-head-close img{
