--- a/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
+++ b/Spring/Photostagram/src/main/resources/templates/fragments/_aside.html
@@ -58,7 +58,7 @@
                             <img th:src=@{/img/44884218_345707102882519_2446069589734326272_n.jpg}/>
                         </th:block>
                         <th:block th:unless="${#strings.isEmpty(user.profileImg)}">
-                            <img th:src=@{/thumb/img(img=${user.profileImg})}/>
+                            <img th:src=@{/thumb/{img}(img=${user.profileImg})}/>
                         </th:block>
                       <span>프로필</span>
                     </a>
@@ -123,7 +123,7 @@
                                 <img th:src=@{/img/44884218_345707102882519_2446069589734326272_n.jpg}/>
                             </th:block>
                             <th:block th:unless="${#strings.isEmpty(user.profileImg)}">
-                                <img th:src=@{/thumb/img(img=${user.profileImg})}/>
+                                <img th:src=@{/thumb/{img}(img=${user.profileImg})}/>
                             </th:block>
                         </span>
                     </a>
@@ -183,9 +183,10 @@
                             </div>
                         </div>
                     </th:block>
+                    <!--검색 결과가 해시태그일 경우-->
                     <th:block th:unless="${list.cate == 1}">
                         <div class="searchlist">
-                            <a th:href="@{#}">
+                            <a th:href="@{/search(no=${list.searchResult})}">
                                 <div>
                                     <img th:src="@{/img/hashtag.PNG}" alt="">
                                 </div>
@@ -333,7 +334,7 @@
 
         <!--더보기 선택시 팝업-->
         <div class="more_logout">
-            <a href="">로그아웃</a>
+            <a th:href="@{/member/logout}">로그아웃</a>
         </div>
     </th:block>
 
