2023/03/11 이메일 인증 기능구현 중

--- a/Spring/Photostagram/src/main/resources/templates/member/email.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/email.html
@@ -4,6 +4,21 @@
        layout:decorate="layout/memberLayout">
 <th:block layout:fragment="main">
 <main class="member">
+    <script>
+        window.onload = pageLoad;
+        function pageLoad(){
+            // alert("hi email!!!");
+            let userData = sessionStorage.getItem("user");
+            let user = JSON.parse(userData);
+            console.log(user);
+
+            let email = user.email;
+            console.log(email);
+
+            
+
+        }
+    </script>
     <div class="container">
         <div class="main-container">
             <div class="main-content">
