--- a/Spring/Photostagram/src/main/resources/templates/member/register.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/register.html
@@ -79,9 +79,9 @@
                                     </button>
                                 </div>
                                 <div class="checking">
-                                    <div class="result-txt unId">사용할 수 없는 아이디입니다.</br>다른 아이디를 사용하세요.</div>
+                                    <div class="result-txt unId">사용할 수 없는 아이디입니다.</br>5자 이상, 영문자와 숫자가 포함되어야합니다.</div>
                                     <div class="result-txt exId">이미 가입되어있는 아이디입니다.</br>다른 아이디를 사용하세요.</div>
-                                    <div class="result-txt name">이름의 형식이 올바르지 않습니다.</br>한글만 입력, 2자 ~ 15자 사이</div>
+                                    <div class="result-txt name">이름이 올바르지 않습니다.</br>한글만 입력, 2자 ~ 15자 사이</div>
                                     <div class="result-txt unEmail">이메일 형식이 올바르지 않습니다.</div>
                                     <div class="result-txt exEmail">이미 존재하는 이메일입니다.</br>다른 이메일을 사용하세요.</div>
                                     <div class="result-txt pass">이 비밀번호는 추측하기가 너무 쉽습니다.</br>다른 비밀번호를 사용하세요.</br>8자 이상, 영문, 숫자, 특수문자 조합</div>
