--- a/HTML/css/chat.css
+++ b/HTML/css/chat.css
@@ -613,3 +613,50 @@ li > img{
     margin: -6px 0 -6px;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
 }
+
+.chat-head-add{
+    display: flex;
+    flex-basis: 32px;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-left: 8px;
+}
+
+.chat-head-add-0{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.chat-head-add-0 img{
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+}
+
+.chat-head-add-1{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.chat-head-add-1 img{
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+}
+
+.chat-head-add-2{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.chat-head-add-2 img{
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+}
