--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -210,11 +210,13 @@ input, textarea {outline: none;}
     border-bottom: 1px solid #e9e9e9;
     font-weight: bold;
   }
-  .fList > li {width: 350px; height: 45px; display: inline-block; padding: 5px;}
-  .fList > li > a:nth-child(1) {float:left; display: block; width: 300px; height: 45px; line-height: 45px;}
-  .fList > li > a:nth-child(2) {width: 40px; height: 45px; line-height: 45px; vertical-align: middle;}
+  .fList > li {width: 350px; height: 50px; display: inline-block; padding: 5px;}
+  .fList > li > a:nth-child(1) {float:left; display: block; width: 280px; height: 45px; line-height: 45px;}
+  .fList > li > a:nth-child(2) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
   .fList > li > a > h1 {height: 45px; float: left; font-size: 14px; margin-left: 10px; vertical-align: middle; line-height: 45px;}
   .fList > li > a > div {float: left; width: 45px; height: 45px; border-radius: 70%; overflow: hidden;}
   .fList > li > a > div > img {width: 100%; height: 100%; line-height: 55px; vertical-align: middle; object-fit: cover;}
 
-  .aFloatRight {float: right;}
+  .aFloatRight {float: right; background: #32a4ff; border-radius: 5px; text-align: center; font-weight: bold;}
+  .userFollow {background: #32a4ff;}
+  .userFollowing {background: #e9e9e9;}
