--- a/Spring/Photostagram/src/main/resources/templates/index.html
+++ b/Spring/Photostagram/src/main/resources/templates/index.html
@@ -151,7 +151,7 @@
             </div>
 
             <div class="likes m_text">
-              좋아요 <span id="like-count">2,346</span>개
+              좋아요 <span id="like-count" th:text="${article.like}">2,346</span>개
             </div>
 
             <!-- 게시글 내용 div -->
