--- a/Spring/Photostagram/src/main/resources/static/css/profile.css
+++ b/Spring/Photostagram/src/main/resources/static/css/profile.css
@@ -213,10 +213,43 @@ input, textarea {outline: none;}
   .fList > li {width: 350px; height: 50px; display: inline-block; padding: 5px;}
   .fList > li > a:nth-child(1) {float:left; display: block; width: 280px; height: 45px; line-height: 45px;}
   .fList > li > a:nth-child(2) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
+  .fList > li > a:nth-child(3) {width: 55px; height: 40px; line-height: 40px; vertical-align: middle;}
   .fList > li > a > h1 {height: 45px; float: left; font-size: 14px; margin-left: 10px; vertical-align: middle; line-height: 45px;}
   .fList > li > a > div {float: left; width: 45px; height: 45px; border-radius: 70%; overflow: hidden;}
   .fList > li > a > div > img {width: 100%; height: 100%; line-height: 55px; vertical-align: middle; object-fit: cover;}
 
-  .aFloatRight {float: right; background: #32a4ff; border-radius: 5px; text-align: center; font-weight: bold;}
-  .userFollow {background: #32a4ff;}
-  .userFollowing {background: #e9e9e9;}
+  .aFloatRight {float: right; background: #32a4ff; border-radius: 5px; text-align: center;}
+  .aFloatRight > span {font-weight: bold;}
+  .userFollow {
+    position: relative;
+    background-color: #32a4ff;
+   }
+   .userFollow > span:nth-child(1) {
+        position: absolute;
+        color: white;
+        left: 10px;
+        top: 10px;
+    }
+
+    .aFloatRight > .spinner {
+        position: absolute;
+        display: none;
+        width: 100%;
+        height: 100%;
+        left: 0;
+        top: 0;
+        background-image: url(../img/GIF/spinner.gif);
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-color: white;
+        background-position: center;
+    }
+
+  .userFollowing {position: relative; background: #e9e9e9;}
+  .userFollowing > span:nth-child(1) {
+    position: absolute;
+    color: black;
+    left: 10px;
+    top: 10px;
+  }
+
