--- a/HTML/css/chat.css
+++ b/HTML/css/chat.css
@@ -660,3 +660,194 @@ li > img{
     height: 40px;
     padding: 8px;
 }
+
+/*채팅 내용 부분*/
+a {
+    text-decoration: none;
+}
+
+.wrap {
+    padding: 40px 0;
+    background-color: #ffffff;
+    overflow-y: auto;
+    overflow-x: hidden;
+    width: 100%;
+    height: 100%;
+}
+
+.wrap .chat {
+    display: flex;
+    align-items: flex-start;
+    padding: 20px;
+}
+
+.wrap .chat .icon {
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+}
+
+.wrap .chat .icon img {
+    width: 24px;
+    height: 24px;
+    margin-top: 14px;
+}
+
+.wrap .chat .textbox {
+    position: relative;
+    display: inline-block;
+    max-width: calc(100% - 70px);
+    padding: 10px;
+    margin-top: 7px;
+    font-size: 13px;
+    border-radius: 10px;
+}
+
+.wrap .chat .textbox::before {
+    position: absolute;
+    display: block;
+    top: 0;
+    font-size: 1.5rem;
+}
+
+.wrap .ch1 .textbox {
+    margin-left: 2px;
+    background-color: #ffffff;
+}
+
+
+
+.wrap .ch2 {
+    flex-direction: row-reverse;
+}
+
+.wrap .ch2 .textbox {
+    margin-right: 20px;
+    background-color: #ddd;
+}
+
+/* 채팅 박스 */
+.chatbox{
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex: 0 0 auto;
+    box-sizing: border-box;
+}
+
+.chatboxem-1{
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex: 0 0 auto;
+    box-sizing: border-box;
+    padding: 20px 20px 20px 20px;
+}
+
+.chatboxem-2{
+    align-items: center;
+    border: 1px solid rgb(219,219, 219);
+    border-radius: 22px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    flex-shrink: 0;
+    font: inherit;
+    font-size: 100%;
+    margin: 0;
+    min-height: 44px;
+    padding: 0;
+    padding-left: 11px;
+    padding-right: 8px;
+    position: relative;
+    vertical-align: baseline;
+}
+
+.chatboxem-3{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.chatboxem-3 img{
+    width: 24px;
+    height: 24px;
+}
+
+.chatbox-box{
+    width: 293px;
+    height: 31px;
+    display: flex;
+    align-items: stretch;
+    flex-direction: column;
+    justify-content: flex-start;
+    flex: 1 1 auto;
+    min-height: 0;
+    min-width: 0;
+    margin-right: 4px;
+    box-sizing: border-box;
+}
+
+.chatbox-box-1{
+    height: auto;
+    background-color: transparent;
+    border: none;
+    overflow: auto;
+    padding: 8px 9px;
+    resize: none;
+}
+
+.mj{
+    width: 40px;
+    height: 42px;
+    align-items: center;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+}
+
+.chatg{
+    height: 42px;
+    align-items: center;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+}
+.chatg-1{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.chatg-1 img{
+    width: 24px;
+    height: 24px;
+}
+
+.chath{
+    height: 42px;
+    align-items: center;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    padding: 8px;
+}
+.chath-1{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.chath-1 img{
+    width: 24px;
+    height: 24px;
+}
