2023/03/13 이메일 코드 기능구현 중

--- a/Spring/Photostagram/src/main/resources/templates/member/email.html
+++ b/Spring/Photostagram/src/main/resources/templates/member/email.html
@@ -5,19 +5,30 @@
 <th:block layout:fragment="main">
 <main class="member">
     <script>
-        window.onload = pageLoad;
-        function pageLoad(){
-            // alert("hi email!!!");
+        window.addEventListener('DOMContentLoaded', function() {
             let userData = sessionStorage.getItem("user");
             let user = JSON.parse(userData);
             console.log(user);
 
             let email = user.email;
-            console.log(email);
+            let jsonData = {"email" : email};
+            console.log(jsonData);
 
-            
-
-        }
+            $.ajax({
+                url: '/Photostagram/member/sendEmail',
+                method: 'POST',
+                data: jsonData,
+                dataType: 'json',
+                success: function(data) {
+                    if (data.result == 1) {
+                        alert('이메일 코드 전송 성공!')
+                        console.log(data.confirm);
+                    } else {
+                        alert('이메일 코드 전송 실패!')
+                    }
+                }
+            });
+        })
     </script>
     <div class="container">
         <div class="main-container">
@@ -32,7 +43,7 @@
                                 <p>인증 코드 입력</p>
                                 <div>
                                     email1234@naver.com 주소로 전송된 인증 <br>
-                                    코드를 입력하세요. 
+                                    코드를 입력하세요.
                                     <a href="#">코드 재전송</a>
                                 </div>
                             </div>
@@ -41,16 +52,16 @@
                                     <input type="text" placeholder="인증코드">
                                 </div>
                                 <div class="btn-group">
-                                    <button type="submit" class="btn-login" id="email-next" onclick="location.href='/member/terms'">
+                                    <button type="submit" class="btn-login" id="email-next">
                                         다음
                                     </button>
                                 </div>
-                            </form>     
+                            </form>
                             <div class="birth">
                                 <div>
                                     <a th:href="@{/member/birth}">돌아가기</a>
                                 </div>
-                            </div>                     
+                            </div>
                         </div>
                     </div>
                     <div class="box goto">
